--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,21 +4,25 @@ services:
   app:
     build: .
     ports:
-      - "8080:8080"
+      - "8083:8080"
     depends_on:
-      - postgres
+      - postgres-notifications
 
-  postgres:
+  postgres-notifications:
     image: postgres
     ports:
-      - "5432:5432"
+      - "5435:5432"
     environment:
-      POSTGRES_DB: postgres_notifications
+      POSTGRES_DB: postgres
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    hostname: notifications-postgres
 
 volumes:
   postgres_data:
+
+networks:
+  default:
+    external:
+      name: my-network
