--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '3'
 
 services:
-  app:
+  notifications-app:
     build: .
     ports:
       - "8083:8080"
     depends_on:
       - postgres-notifications
 
-  postgres-notifications:
+  notifications-postgres:
     image: postgres
     ports:
       - "5435:5432"
