--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "8083:8080"
     depends_on:
-      - postgres-notifications
+      - notifications-postgres
 
   notifications-postgres:
     image: postgres
